# cookiecutter-sphinx-paper

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.report_slug}}/: cheatsheet.rst  cheatsheet.txt  conf.py  docserver  index.rst  introduction.rst  references.bib  results.rst  settings.toml
{{cookiecutter.report_slug}}/figures/: README.txt
{{cookiecutter.report_slug}}/static/: README.txt
{{cookiecutter.report_slug}}/tables/: README.txt  sample_data.csv
{{cookiecutter.report_slug}}/templates/: longtable.tex_t
