[tool.poetry]
name = "cookiecutter-sphinx-report"
version = "0.1.0"
description = ""
authors = ["Thomas Tu <thomasthetu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^2.3.1"
nbsphinx = "^0.5.1"
graphviz = "^0.13.2"
sphinxcontrib-plantuml = "^0.18"
sphinxcontrib-bibtex = "^1.0.0"
recommonmark = "^0.6.0"
dynaconf = "^2.2.2"
livereload = "^2.6.1"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
